Generate version 2.12.0
