# src/main/java/com/channelengine/channel/apiclient/model/ChannelReturnLineResponse.java
@@ -25,6 +25,9 @@ import com.google.gson.stream.JsonWriter;
 import io.swagger.annotations.ApiModel;
 import io.swagger.annotations.ApiModelProperty;
 import java.io.IOException;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import org.openapitools.jackson.nullable.JsonNullable;
 
 /**
@@ -59,6 +62,10 @@ public class ChannelReturnLineResponse {
   public static final String SERIALIZED_NAME_QUANTITY = "Quantity";
   @SerializedName(SERIALIZED_NAME_QUANTITY)
   private Integer quantity;
+
+  public static final String SERIALIZED_NAME_EXTRA_DATA = "ExtraData";
+  @SerializedName(SERIALIZED_NAME_EXTRA_DATA)
+  private Map<String, String> extraData = null;
 
 
   public ChannelReturnLineResponse channelProductNo(String channelProductNo) {
@@ -223,6 +230,37 @@ public class ChannelReturnLineResponse {
   }
 
 
+  public ChannelReturnLineResponse extraData(Map<String, String> extraData) {
+    
+    this.extraData = extraData;
+    return this;
+  }
+
+  public ChannelReturnLineResponse putExtraDataItem(String key, String extraDataItem) {
+    if (this.extraData == null) {
+      this.extraData = new HashMap<String, String>();
+    }
+    this.extraData.put(key, extraDataItem);
+    return this;
+  }
+
+   /**
+   * Extra data on the returnline. Each item must have an unqiue key
+   * @return extraData
+  **/
+  @javax.annotation.Nullable
+  @ApiModelProperty(value = "Extra data on the returnline. Each item must have an unqiue key")
+
+  public Map<String, String> getExtraData() {
+    return extraData;
+  }
+
+
+  public void setExtraData(Map<String, String> extraData) {
+    this.extraData = extraData;
+  }
+
+
   @Override
   public boolean equals(Object o) {
     if (this == o) {
@@ -238,7 +276,8 @@ public class ChannelReturnLineResponse {
         Objects.equals(this.rejectedQuantity, channelReturnLineResponse.rejectedQuantity) &&
         Objects.equals(this.orderLine, channelReturnLineResponse.orderLine) &&
         Objects.equals(this.shipmentStatus, channelReturnLineResponse.shipmentStatus) &&
-        Objects.equals(this.quantity, channelReturnLineResponse.quantity);
+        Objects.equals(this.quantity, channelReturnLineResponse.quantity) &&
+        Objects.equals(this.extraData, channelReturnLineResponse.extraData);
   }
 
   private static <T> boolean equalsNullable(JsonNullable<T> a, JsonNullable<T> b) {
@@ -247,7 +286,7 @@ public class ChannelReturnLineResponse {
 
   @Override
   public int hashCode() {
-    return Objects.hash(channelProductNo, merchantProductNo, acceptedQuantity, rejectedQuantity, orderLine, shipmentStatus, quantity);
+    return Objects.hash(channelProductNo, merchantProductNo, acceptedQuantity, rejectedQuantity, orderLine, shipmentStatus, quantity, extraData);
   }
 
   private static <T> int hashCodeNullable(JsonNullable<T> a) {
@@ -268,6 +307,7 @@ public class ChannelReturnLineResponse {
     sb.append("    orderLine: ").append(toIndentedString(orderLine)).append("\n");
     sb.append("    shipmentStatus: ").append(toIndentedString(shipmentStatus)).append("\n");
     sb.append("    quantity: ").append(toIndentedString(quantity)).append("\n");
+    sb.append("    extraData: ").append(toIndentedString(extraData)).append("\n");
     sb.append("}");
     return sb.toString();
   }
