# src/main/java/com/channelengine/channel/apiclient/model/ChannelReturnRequest.java
@@ -28,7 +28,9 @@ import io.swagger.annotations.ApiModelProperty;
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import org.openapitools.jackson.nullable.JsonNullable;
 import org.threeten.bp.OffsetDateTime;
 
@@ -92,6 +94,10 @@ public class ChannelReturnRequest {
   public static final String SERIALIZED_NAME_RETURN_DATE = "ReturnDate";
   @SerializedName(SERIALIZED_NAME_RETURN_DATE)
   private OffsetDateTime returnDate;
+
+  public static final String SERIALIZED_NAME_EXTRA_DATA = "ExtraData";
+  @SerializedName(SERIALIZED_NAME_EXTRA_DATA)
+  private Map<String, String> extraData = null;
 
 
   public ChannelReturnRequest channelOrderNo(String channelOrderNo) {
@@ -423,6 +429,37 @@ public class ChannelReturnRequest {
   }
 
 
+  public ChannelReturnRequest extraData(Map<String, String> extraData) {
+    
+    this.extraData = extraData;
+    return this;
+  }
+
+  public ChannelReturnRequest putExtraDataItem(String key, String extraDataItem) {
+    if (this.extraData == null) {
+      this.extraData = new HashMap<String, String>();
+    }
+    this.extraData.put(key, extraDataItem);
+    return this;
+  }
+
+   /**
+   * Extra data on the return. Each item must have an unqiue key
+   * @return extraData
+  **/
+  @javax.annotation.Nullable
+  @ApiModelProperty(value = "Extra data on the return. Each item must have an unqiue key")
+
+  public Map<String, String> getExtraData() {
+    return extraData;
+  }
+
+
+  public void setExtraData(Map<String, String> extraData) {
+    this.extraData = extraData;
+  }
+
+
   @Override
   public boolean equals(Object o) {
     if (this == o) {
@@ -445,7 +482,8 @@ public class ChannelReturnRequest {
         Objects.equals(this.merchantComment, channelReturnRequest.merchantComment) &&
         Objects.equals(this.refundInclVat, channelReturnRequest.refundInclVat) &&
         Objects.equals(this.refundExclVat, channelReturnRequest.refundExclVat) &&
-        Objects.equals(this.returnDate, channelReturnRequest.returnDate);
+        Objects.equals(this.returnDate, channelReturnRequest.returnDate) &&
+        Objects.equals(this.extraData, channelReturnRequest.extraData);
   }
 
   private static <T> boolean equalsNullable(JsonNullable<T> a, JsonNullable<T> b) {
@@ -454,7 +492,7 @@ public class ChannelReturnRequest {
 
   @Override
   public int hashCode() {
-    return Objects.hash(channelOrderNo, merchantOrderNo, channelReference, keyIsMerchantOrderNo, keyIsMerchantProductNo, lines, status, id, reason, customerComment, merchantComment, refundInclVat, refundExclVat, returnDate);
+    return Objects.hash(channelOrderNo, merchantOrderNo, channelReference, keyIsMerchantOrderNo, keyIsMerchantProductNo, lines, status, id, reason, customerComment, merchantComment, refundInclVat, refundExclVat, returnDate, extraData);
   }
 
   private static <T> int hashCodeNullable(JsonNullable<T> a) {
@@ -482,6 +520,7 @@ public class ChannelReturnRequest {
     sb.append("    refundInclVat: ").append(toIndentedString(refundInclVat)).append("\n");
     sb.append("    refundExclVat: ").append(toIndentedString(refundExclVat)).append("\n");
     sb.append("    returnDate: ").append(toIndentedString(returnDate)).append("\n");
+    sb.append("    extraData: ").append(toIndentedString(extraData)).append("\n");
     sb.append("}");
     return sb.toString();
   }
